sightread/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sightread
spec:
  selector:
    app: sightread
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
